# i_edit_json

./: Cargo.toml  README.en.md  README.md
.github/workflows/: ghcr-clean.yml
docs/: README.md  ai.designer.md  托管管理-gh.md  版本管理.md
src/: error.rs  lib.rs  main.rs
src/get/: core.rs  mod.rs  types.rs  utils.rs  xcli.rs
src/set/: core.rs  mod.rs  types.rs  utils.rs  xcli.rs
