[package]
name = "i_edit_json"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-performance tool for editing JSON based on field paths"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/i_edit_json"
readme = "README.md"
keywords = ["json", "edit", "cli", "query"]
categories = ["command-line-utilities", "development-tools", "config"]
documentation = "https://docs.rs/i_edit_json"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "i_edit_json"
path = "src/main.rs"

[lib]
name = "i_edit_json"
path = "src/lib.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]